--- a/index.html
+++ b/index.html
@@ -28,29 +28,22 @@
   </button>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-left">
-          <li id="sign-out-nav"><a href=#>Sign Out</a></li>
+        <ul class="nav navbar-nav navbar-left show-signed-in">
+          <li id="sign-out-nav" ><a href=#>Sign Out</a></li>
         </ul>
-        <ul class="nav navbar-nav navbar-left">
+        <ul class="nav navbar-nav navbar-left show-signed-out">
           <li id="sign-in-nav" data-toggle="modal" data-target="#sign-in-modal"><a href=#>Sign In</a></li>
         </ul>
-        <ul class="nav navbar-nav navbar-left">
+        <ul class="nav navbar-nav navbar-left show-signed-out">
           <li id="sign-up-nav" data-toggle="modal" data-target="#sign-up-modal"><a href=#>Sign Up</a></li>
         </ul>
-        <ul class="nav navbar-nav navbar-left">
+        <ul class="nav navbar-nav navbar-left show-signed-in">
           <li id="change-password-nav" data-toggle="modal" data-target="#change-password-modal"><a href=#>Change Password</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-left">
-          <li id="stats-nav" data-toggle="modal" data-target="#stats-modal"><a href=#>Stats</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-left">
           <li id="about-nav" data-toggle="modal" data-target="#about-modal"><a href=#>About</a></li>
         </ul>
       </div>
-      <div class="collapse navbar-collapse">
-        <ul class="nav navbar-nav navbar-left">
-          </li>
-        </ul>
       </div>
     </div>
   </nav>
