Adds GET request to /monsters
onGetMonsters in game/events.js calls the getMonsters func in game/api
and displays the results in console. Log will be removed later, but this
is critical functionality for a user to see his/her monsters.

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     </div>
   </section>
   <section class="game-content">
-
+    <p><a class="btn btn-primary btn-lg" role="button" id="get-monsters">get monsters</a></p>
   </section>
 </body>
 
