Adds handlebars template for get monsters
It does it and it is cool.

--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
   </section>
   <section class="game-content">
     <p><a class="btn btn-primary btn-lg" role="button" id="get-monsters">get monsters</a></p>
+    <div class="row content"></div>
           <form id="create-monster">
               <input class="form-control" type="text" name="monster[name]" id="monster-name" placeholder="monster name"></br>
               <button type="submit" class="btn btn-primary">Create Monster</button>
