Updates About modal
Updates technologies used

--- a/index.html
+++ b/index.html
@@ -133,13 +133,15 @@
         </div>
         <div class="modal-body">
           <div class="page-header">
-            <h1>GalacTic-Tac-Toe<br>
+            <h1>PixlMonster<br>
             <small> by Alan Henderson</small></h1>
             <p class="lead">This site was made with love using:</p>
             <ul class="list-group">
               <li class="list-group-item">HTML/CSS</li>
               <li class="list-group-item">JavaScript</li>
+              <li class="list-group-item">JQuery</li>
               <li class="list-group-item">Bootstrap</li>
+              <li class="list-group-item">Handlebars</li>
               <li class="list-group-item">Ruby on Rails</li>
             </ul>
           </div>
