--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       </div>
     </div>
   </section>
-  <section id="game_content" class="show-signed-in">
+  <section id="game_content" class="show-signed-in game">
     <section id="monsters_overview">
       <p><a class="btn btn-primary btn-lg" role="button" id="get-monsters">get monsters</a></p>
       <div class="row content"></div>
