--- a/index.html
+++ b/index.html
@@ -213,7 +213,11 @@
     </section>
     <section id="monster_details" class="logout-hide game-inner-view">
       <div class="row monster-detail"></div>
-      <button type="submit" id="back-to-overview" class="btn btn-primary">Back</button>
+
+    <div class="row">
+    <button type="submit" id="back-to-overview" class="btn btn-primary">Back</button>
+  </div>
+
     </section>
   </section>
 </body>
