--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     </div>
   </section>
   <section id="game_content" class="show-signed-in game">
-    <section id="monsters_overview">
+    <section id="monsters_overview" class="show-signed-in">
       <div class="row content"></div>
       <p><a id="new-monster-button" class="btn btn-primary btn-lg" role="button" data-toggle="modal">New Monster</a></p>
 
