--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <li id="sign-out-nav"><a href=#>Sign Out</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-left show-signed-out">
-          <li id="sign-in-nav" data-toggle="modal" data-target="#sign-in-modal"><a href=#>Sign In</a></li>
+          <li id="sign-in-nav" data-toggle="modal" data-target="#sign-in-modal" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"><a href=#>Sign In</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-left show-signed-out">
           <li id="sign-up-nav" data-toggle="modal" data-target="#sign-up-modal"><a href=#>Sign Up</a></li>
